Minor UI improvements

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    #map {
-      height: 90vh;  /* The height is 400 pixels */
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div>Year: <span id="year"></span></div>
