--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <div>Year: <span id="year"></span></div>
+  <button type="button" id="pause" onclick="togglePause()">Pause</button>
   <div id="title"></div>
   <div id="map"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
