--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div>Year: <span id="year"></span></div>
   <button type="button" id="pause" onclick="togglePause()">Pause</button>
   <div id="title"></div>
-  <div id="map"></div>
+  <div id="map" class="map"></div>
+  <div id="timeline" class="timeline">
+  	<div id="marker" class="marker"></div>
+    <div class="line"></div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="map.js"></script>
   <script async defer
