Small UI improvements

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <button type="button" id="pause" onclick="togglePause()">Pause</button>
   <div id="title"></div>
   <div id="map" class="map"></div>
+  <button type="button" id="pause" onclick="togglePause()">Pause</button>
+  <div>Year:  <span id="year"></span></div>
   <div id="timeline" class="timeline">
   	<div id="marker" class="marker"></div>
     <div class="line"></div>
