--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <div id="title"></div>
   <div id="map" class="map"></div>
   <button type="button" id="pause" onclick="togglePause()">Pause</button>
-  <div>Year:  <span id="year"></span></div>
   <input type="range" min="-1100" max="2020" value="-1100" id="timelineRange" class="timeline-range">
+  <div class="year-text">Year:  <span id="year"></span></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="map.js"></script>
   <script async defer
