--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="year-text">Year:  <span id="year"></span></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="map.js"></script>
+  <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_Dne13JoOyWasg86fPOBACDgq2wpG7zo&callback=initMap"></script>
-</body>
 </html>
