--- a/index.html
+++ b/index.html
@@ -6,29 +6,37 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="container">
-      <div class="page-header">
-        <h1>The Jewish story through books</h1>      
-        <p>A time-lapse of where and when Jewish books were published. Each item that falls on the map is a book that was written in a certain place/time. Special thanks to <a href="https://www.sefaria.org/">Sefaria</a> and <a href="https://hebrewbooks.org/">HebrewBooks.org</a> for their extensive lists of published works.</p>
-      </div>
-    </div>
-    <div id="map" class="map"></div>
-    <footer class="container-fluid text-center">
-      <input type="range" min="-1100" max="2020" value="-1100" id="timelineRange" class="timeline-range">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col button-column">
-            <button type="button" class="h-100 btn btn-primary" id="pause" onclick="togglePause()">Pause</button>
-          </div>
-          <div class="col">
-            <div class="year-text">
-              Year:  <span id="year"></span>
-            </div>
+  <div class="container-fluid h-100">
+    <div class="h-100 d-flex flex-column">
+      <div class="row">
+        <div class="container">
+          <div class="page-header">
+            <h1>The Jewish story through books</h1>      
+            <p>A time-lapse of where and when Jewish books were published. Each item that falls on the map is a book that was written in a certain place/time. Special thanks to <a href="https://www.sefaria.org/">Sefaria</a> and <a href="https://hebrewbooks.org/">HebrewBooks.org</a> for their extensive lists of published works.</p>
           </div>
         </div>
       </div>
-    </footer>
+      <div class="row flex-grow-1 map-container">
+        <div id="map" class="map"></div>
+      </div>
+      <div class="row">
+        <footer class="container-fluid text-center">
+          <input type="range" min="-1100" max="2020" value="-1100" id="timelineRange" class="timeline-range">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col button-column">
+                <button type="button" class="h-100 btn btn-primary" id="pause" onclick="togglePause()">Pause</button>
+              </div>
+              <div class="col">
+                <div class="year-text">
+                  Year:  <span id="year"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="map.js"></script>
