--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
           <div class="page-header">
             <h1>The Jewish story through books</h1>      
-            <p>A time-lapse of where and when Jewish books were published. Each item that falls on the map is a book that was written in a certain place/time. Special thanks to <a href="https://www.sefaria.org/">Sefaria</a> and <a href="https://hebrewbooks.org/">HebrewBooks.org</a> for their extensive lists of published works.</p> If for some reason you're not seeing anything happening on the map, try refreshing a couple of times. joshcooper417+timelapse@gmail.com for any questions. Enjoy!
+            <p>A time-lapse of where and when Jewish books were published. Each item that falls on the map is a book that was written in a certain place/time. Special thanks to <a href="https://www.sefaria.org/">Sefaria</a> and <a href="https://hebrewbooks.org/">HebrewBooks.org</a> for their extensive lists of published works.</p> If for some reason you're not seeing anything happening on the map, try refreshing a couple of times. <img src="email.png"> for any questions. Enjoy!
           </div>
         </div>
       </div>
