--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>The Jewish story throgh books</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="torah.png" type="image/icon type">
 </head>
 <body>
   <div class="container-fluid h-100">
